# rs_todos

./: .gitignore  Cargo.toml  diesel.toml  makefile  readme.md
.github/workflows/: dev.yml
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/in/rest/: dto.rs  mod.rs
crates/domain/: Cargo.toml
crates/domain/src/todo/: entity.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/diesel/: models.rs
crates/infrastructure/src/todo/: repositories.rs  repository.rs
crates/server/: Cargo.toml
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/service/src/todo/: use_case.rs
docs/postgres_local/: docker-compose.yaml
migrations/2023-10-09-054441_create_todos/: down.sql  up.sql
migrations/2023-10-09-093051_update_todos/: down.sql  up.sql
migrations/2023-10-09-093807_insert_todos/: down.sql  up.sql
src/: main.rs
src/application/: dtos.rs
src/domain/: entities.rs  repositories.rs
src/infrastructure/diesel/: mod.rs  models.rs
src/infrastructure/todo/: repositories.rs
src/service/: mod.rs  todo.rs
