[workspace]
members = [
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
    "crates/server",
    "crates/service",
]
default-members = ["crates/application"]
resolver = "2"

[workspace.dependencies]
serde = "1.0.188"
async-graphql = "6.0.7"
diesel = {version = "2.1.3", features = ["postgres"]}
mockall = "0.11.4"
